# ChangeLog for gnustep-base/gnustep-env
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-env/ChangeLog,v 1.28 2007/03/18 01:31:33 genone Exp $

  18 Mar 2007; Marius Mauch <genone@gentoo.org> gnustep-env-0.1.6-r1.ebuild,
  gnustep-env-0.1.8.ebuild, gnustep-env-0.1.8-r1.ebuild:
  Replacing einfo with elog

  25 Oct 2006; Joshua Jackson <tsunam@gentoo.org> gnustep-env-0.1.8.ebuild:
  Stable x86; bug #139385

  24 Oct 2006; Simon Stelling <blubb@gentoo.org> gnustep-env-0.1.8.ebuild:
  stable on amd64

*gnustep-env-0.1.8-r1 (11 Oct 2006)

  11 Oct 2006; Fabian Groffen <grobian@gentoo.org>
  +gnustep-env-0.1.8-r1.ebuild:
  Fix for bug #149174, remove init.d script, but make sure it will be
  installed by depending on gnustep-base-1.13.

  16 Aug 2006; Jason Wever <weeve@gentoo.org> gnustep-env-0.1.8.ebuild:
  Stable on SPARC wrt bug #139385.

*gnustep-env-0.1.8 (27 Jul 2006)

  27 Jul 2006; Fabian Groffen <grobian@gentoo.org>
  gnustep-env-0.1.6-r1.ebuild, -gnustep-env-0.1.7.ebuild,
  +gnustep-env-0.1.8.ebuild:
  bump, update requirements to latest versions, "fix" homepage.  Dropped
  ~alpha as they don't meet the requirements for gnustep-base, gnustep-make,
  gnustep-gui and gnustep-back

*gnustep-env-0.1.7 (25 Mar 2006)

  25 Mar 2006; Fabian Groffen <grobian@gentoo.org> -files/gnustep.env-0.1.4,
  -files/gnustep.runscript-0.1.4, -files/gnustep.env-0.1.5,
  -files/gnustep.runscript-0.1.5, +files/gnustep.env-0.1.7,
  +files/gnustep.runscript-0.1.7, -gnustep-env-0.1.4.ebuild,
  -gnustep-env-0.1.5.ebuild, +gnustep-env-0.1.7.ebuild:
  Remove ebuilds that refer to ebuilds no longer in portage. Add 1.7 which
  should pull in latest versions.

  15 Jan 2006; Simon Stelling <blubb@gentoo.org>
  gnustep-env-0.1.6-r1.ebuild:
  stable on amd64

  14 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  gnustep-env-0.1.6-r1.ebuild:
  Stable on ppc.

  09 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org>