@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-env/gnustep-env-0.1.8-r1.ebuild,v 1.2 2007/03/18 01:31:33 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-env/gnustep-env-0.1.8-r1.ebuild,v 1.3 2007/04/09 13:41:31 grobian Exp $
 
 EAPI="prefix"
 
@@ -34,8 +34,7 @@ src_compile() {
 
 src_install() {
 	egnustep_env
-	insinto /etc/env.d
-	newins ${FILESDIR}/gnustep.env-${PV} 99gnustep
+	newenvd ${FILESDIR}/gnustep.env-${PV} 99gnustep
 	dosed "s:XXX_GNUSTEP_USER_ROOT_XXX:~$(egnustep_user_root_suffix):g" /etc/env.d/99gnustep
 	dosed "s:XXX_GNUSTEP_LOCAL_ROOT_XXX:$(egnustep_local_root):g" /etc/env.d/99gnustep
 	dosed "s:XXX_GNUSTEP_NETWORK_ROOT_XXX:$(egnustep_network_root):g" /etc/env.d/99gnustep
